# PuffleRoundUP

./: .gitignore  Makefile.am  configure.ac
data/: Makefile.am
data/desktop/: roundup.desktop
data/images/: .directory
etc/: Info.plist.in  Makefile.am  roundup.icns
po/: POTFILES.in  de.po  es.po  fr.po  puffle-roundup.pot
src/: Makefile.am  draw-text.c  draw-text.h  roundup.c  roundup.rc  strsep.c  strsep.h
