gamedatadir = $(pkgdatadir)/data

nobase_dist_gamedata_DATA = images/fondo.png \
	images/intro.png \
	images/puffle-intro.png \
	images/title-cage.png \
	images/puffle-azul.png \
	images/puffle-rosa.png \
	images/puffle-verde.png \
	images/puffle-negro.png \
	images/puffle-morado.png \
	images/puffle-rojo.png \
	images/puffle-amarillo.png \
	images/puffle-blanco.png \
	images/puffle-naranja.png \
	images/puffle-cafe.png \
	images/puffle-pen.png \
	images/wall.png \
	images/reloj.png \
	images/boton-close-over.png \
	images/boton-close-up.png \
	images/boton-close-down.png \
	ccfacefront.ttf

